# figure_classification

./: CMakeLists.txt  README.md  digital_detection.cpp  figure_detection.h  main.cpp  model_nin.pth
